Improve `Display` and `Workflow` widgets in `More` menu. Fix alignments.

--- a/theme/themes/pastanaga/extras/toolbar.less
+++ b/theme/themes/pastanaga/extras/toolbar.less
@@ -674,18 +674,15 @@ body:not(.has-sidebar):not(.has-sidebar-collapsed) {
 
     .state-select,
     .display-select {
-      display: flex;
-      width: 100%;
+      .inline.field .wrapper {
+        min-height: unset;
+      }
 
       .react-select-container {
         flex: 1 0 75%;
       }
 
       label {
-        flex: 1 0 25%;
-        padding-top: 18px;
-        border-bottom: 1px solid #edf1f2;
-        margin-right: 5px;
         font-size: 14px;
         font-weight: 500;
         text-transform: uppercase;
